<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <ImageView
    android:id="@+id/character_detail_iv"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="8dp"
    android:layout_weight="1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/character_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/character_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comics"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/character_comics_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/character_series_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stories"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/character_stories_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urls"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:id="@+id/character_urls_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>